# ulauncher-protonvpn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  manifest.json  pyproject.toml
.github/workflows/: ci.yml
src/: listeners.py  protonvpn.py  utils.py
tests/: conftest.py  test_listeners.py  test_protonvpn.py  test_utils.py
typings/: pytest.pyi
typings/gi/repository/: Notify.pyi  __init__.pyi
typings/ulauncher/api/client/: EventListener.pyi  Extension.pyi
typings/ulauncher/api/shared/: event.pyi
typings/ulauncher/api/shared/action/: ExtensionCustomAction.pyi  HideWindowAction.pyi  RenderResultListAction.pyi
typings/ulauncher/api/shared/item/: ExtensionResultItem.pyi
