# pyproject.toml is used for local development and CI only.
# Ulauncher installs extensions directly from git — it does not use pip,
# does not read this file, and does not install dependencies from it.
# Runtime dependencies (PyGObject, protonvpn CLI) must be present on the system.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ulauncher-protonvpn"
version = "1.0.0"
description = "Ulauncher extension to quickly connect and manage ProtonVPN."
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Claudio Sanches" },
]
keywords = [
    "protonvpn",
    "ulauncher",
    "vpn",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
    "Topic :: Internet",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/claudiosanches/ulauncher-protonvpn"
Repository = "https://github.com/claudiosanches/ulauncher-protonvpn"
Issues = "https://github.com/claudiosanches/ulauncher-protonvpn/issues"
Changelog = "https://github.com/claudiosanches/ulauncher-protonvpn/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["main"]
packages = ["src"]

[dependency-groups]
test = [
    "pytest",
]
